--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 	implementation 'org.jsoup:jsoup:1.15.3'
 
 	// ?? 를 보기 쉽게 해주는 dependency
-	implementation("com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.7")
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.7'
 }
 
 
