--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -31,10 +31,13 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'mysql:mysql-connector-java:8.0.27'
+    implementation 'org.springframework.data:spring-data-rest-webmvc:4.1.3'
+//    implementation 'org.springframework:spring-core:5.3.10'
+    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
     // Swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
     // Test
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.jsoup:jsoup:1.15.3'
 	// ?? 를 보기 쉽게 해주는 dependency
 
