--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/hotstock
-    username: root
-    password: root
+    username: ssafy
+    password: ssafy
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
@@ -22,4 +22,3 @@ server:
   port: 8080  # 포트 설정
   servlet:
     context-path: /hotstock  # 기본 경로(prefix) 설정
-
