Feat : 키워드 저장 메소드 구현

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -13,6 +13,12 @@ spring:
       hibernate:
         format_sql: true
         show-sql: true
+#  data:
+#    redis:
+#      host: localhost
+#      port: 6380
+#      password: root
+
 logging:
   level:
     org.hibernate.SQL: debug
