--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -39,8 +39,11 @@ dependencies {
     // Test
 //    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.jsoup:jsoup:1.15.3'
-	// ?? 를 보기 쉽게 해주는 dependency
 
+    // Redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+    // ?? 를 보기 쉽게 해주는 dependency
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.7'
 }
 
