Feat : docker-compose network 추가

--- a/docker-compose.green.yaml
+++ b/docker-compose.green.yaml
@@ -6,3 +6,8 @@ services:
     image: mydowson/a206:back
     ports:
       - '8081:8080'
+
+networks:
+  default:
+    external: true
+    name: service-network
