--- a/docker-compose.blue.yaml
+++ b/docker-compose.blue.yaml
@@ -6,3 +6,8 @@ services:
     image: mydowson/a206:back
     ports:
       - '8080:8080'
+
+networks:
+  default:
+    external: true
+    name: service-network
