--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -41,7 +41,7 @@ dependencies {
 	implementation 'org.jsoup:jsoup:1.15.3'
 
     // Redis
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+//    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     // ?? 를 보기 쉽게 해주는 dependency
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.7'
@@ -50,7 +50,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'io.micrometer:micrometer-registry-prometheus'
 
-    // cache 사용
+    // cache
     implementation 'org.springframework.boot:spring-boot-starter-cache'
 }
 
