--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.32.5",
+    "TagCloud": "^2.4.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
