--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,5 +2,6 @@
 FROM openjdk:17-jdk-slim
 ARG JAR_FILE=build/libs/*.jar
 COPY ${JAR_FILE} app.jar
+COPY ./src/main/resources/stocks.json /src/main/resources/stocks.json
 RUN apt-get update
 ENTRYPOINT ["java", "-jar", "/app.jar"]
