Fix : 백엔드 database path로 인해 발생하는 문제 수정 - local과 serverDB 분리

--- a/docker-compose.blue.yaml
+++ b/docker-compose.blue.yaml
@@ -6,6 +6,10 @@ services:
     image: mydowson/a206:back
     ports:
       - '8080:8080'
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://172.17.0.1:3306/hotstock
+      SPRING_DATASOURCE_USERNAME: A206
+      SPRING_DATASOURCE_PASSWORD: ssafyA206
 
 networks:
   default:
