--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,11 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://j9a206.p.ssafy.io:3306/hotstock
-#    url: jdbc:mysql://localhost:3306/hotstock
+    url: jdbc:mysql://localhost:3306/hotstock
     username: A206
     password: ssafyA206
-#    username: ssafy
-#    password: ssafy
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
