Feat: 뉴스 요약 내용 가져오기 추가

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -52,6 +52,9 @@ dependencies {
 
     // cache
     implementation 'org.springframework.boot:spring-boot-starter-cache'
+
+    // selenium
+    implementation 'org.seleniumhq.selenium:selenium-java:4.1.2'
 }
 
 
