Revert "Fix: 오류 수정"
This reverts commit 17116a5bb2d131294d36e578c10d2d11a8b1f5fa.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,6 +3,6 @@ FROM openjdk:17-jdk-slim
 ARG JAR_FILE=build/libs/*.jar
 COPY ${JAR_FILE} app.jar
 COPY ./src/main/resources/stocks.json /src/main/resources/stocks.json
-COPY ./src/main/resources/chromedriver_linux /src/main/resources/chromedriver_linux
+COPY ./src/main/resources/chromedriver.exe /src/main/resources/chromedriver.exe
 RUN apt-get update
 ENTRYPOINT ["java", "-jar", "/app.jar"]
