Feat : 백엔드 컨테이너에 Chrome 설치 추가

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,16 @@
-# 기본 도커 이미지로부터 시작합니다.
+# Start from the default Docker image.
 FROM openjdk:17-jdk-slim
+
+# Install necessary packages and Chrome
+RUN apt-get update \
+    && apt-get install -y wget curl unzip software-properties-common \
+    && wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb \
+    && dpkg -i google-chrome-stable_current_amd64.deb; apt-get -fy install
+
+#Copy the application jar file and resources
 ARG JAR_FILE=build/libs/*.jar
 COPY ${JAR_FILE} app.jar
 COPY ./src/main/resources/stocks.json /src/main/resources/stocks.json
-RUN apt-get update
+
+#Set the entrypoint
 ENTRYPOINT ["java", "-jar", "/app.jar"]
