--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -55,6 +55,10 @@ dependencies {
 
     // selenium
     implementation 'org.seleniumhq.selenium:selenium-java:4.1.2'
+
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 }
 
 
