--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
+    "@types/cytoscape": "^3.19.11",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "cytoscape-cose-bilkent": "^4.1.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.4",
