Fix: 크롬드라이버 설정 변경

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,15 +14,15 @@ RUN wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.d
 
 RUN apt -y install ./google-chrome-stable_current_amd64.deb
 
-RUN wget -O /tmp/chromedriver.zip https://chromedriver.storage.googleapis.com/` curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE`/chromedriver_linux64.zip
+RUN #wget -O /tmp/chromedriver.zip https://chromedriver.storage.googleapis.com/` curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE`/chromedriver_linux64.zip
 
-RUN unzip /tmp/chromedriver.zip chromedriver -d /usr/bin
+RUN #unzip /tmp/chromedriver.zip chromedriver -d /usr/bin
 
 #Copy the application jar file and resources
 ARG JAR_FILE=build/libs/*.jar
 COPY ${JAR_FILE} app.jar
 COPY ./src/main/resources/stocks.json /src/main/resources/stocks.json
-#COPY ./src/main/resources/chromedriver_linux /usr/bin/chromedriver
+COPY ./src/main/resources/chromedriver_linux /usr/bin/chromedriver
 RUN chmod +x /usr/bin/chromedriver
 
 
