--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -54,7 +54,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-cache'
 
     // selenium
-    implementation 'org.seleniumhq.selenium:selenium-java:4.1.2'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.9.0'
+
+    // ChromeDriver
+    implementation group: 'org.seleniumhq.selenium', name: 'selenium-chrome-driver', version: '4.9.0'
 
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
