--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -54,10 +54,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-cache'
 
     // selenium
-    implementation 'org.seleniumhq.selenium:selenium-java:4.9.0'
+    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.13.0'
+
 
     // ChromeDriver
-    implementation group: 'org.seleniumhq.selenium', name: 'selenium-chrome-driver', version: '4.9.0'
+    implementation group: 'org.seleniumhq.selenium', name: 'selenium-chrome-driver', version: '4.13.0'
 
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
