--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-cache'
 
     // selenium
-    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.8.3'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.8.3'
 
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
