--- a/python-server/Dockerfile
+++ b/python-server/Dockerfile
@@ -1,6 +1,19 @@
 # 기본 파이썬 이미지 사용
 FROM python:3.11.5-slim
 
+# Install necessary packages and Chrome
+RUN apt-get -y update
+
+RUN apt -y install wget
+
+RUN apt -y install unzip
+
+RUN apt -y install curl
+
+RUN wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+
+RUN apt -y install ./google-chrome-stable_current_amd64.deb
+
 #작업 디렉토리 설정
 WORKDIR /app
 
